--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,12 @@
     text-align: center;
 }
 
+.container{
+    display: block;
+    width: 70%;
+    margin: 0 auto;
+}
+
 .tab {
     display: inline-block;
     text-align: center;
