--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -16,6 +16,6 @@
         </div>
       </div>
     </a>
-    <a (click)="toggleIcon(job, job.id, i)"><span [style.color]="changeColor[i]  ? '#0000F5': '#ffffff'" class="material-symbols-outlined">star</span></a>
+    <a (click)="toggleIcon(job, job.id, i)"><span [style.color]="active[i]  ? '#0000F5': '#ffffff'" class="material-symbols-outlined">star</span></a>
   </li>
 </ul>
