--- a/src/app/jobs/jobs.component.css
+++ b/src/app/jobs/jobs.component.css
@@ -1,13 +1,15 @@
 .jobs {
     display: block;
-    width: 70%;
+    width: 75%;
     margin: 0 auto;
     list-style-type: none;
     li {
         text-align: left;
         a {
             text-decoration: none;
+            color: #fff;
             span{
+
                 margin-right: 0;
             }
         }
@@ -17,6 +19,9 @@
             img {
                 width:50px;
             }
+        }
+        .star-icon {
+            padding:10px;
         }
     }
 
